Double line on top of files group removed.
Former-commit-id: 095ee0004ef4c77d37a8b957a52cd8daabe495b5

--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -43,7 +43,7 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine newBlock" rendered="#{index.index > 0}"/>
 
 <%-- File name --%>
-	<h:panelGroup layout="block" styleClass="free_area0 endline itemLine">
+	<h:panelGroup layout="block">
 			<div class="free_area0 endline itemLine firstLine">
 				<div class="free_area0 endline itemLine firstLine">
 					<span class="xLarge_area0 endline labelLine featureIcon">
