--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/theme.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_darkGrey/styles/theme.css
@@ -32,6 +32,7 @@
 
 /* import vendor specific styles | anbieterspezifische Styles einbinden */
 	/* import vendor specific appearance styles | das kundenspezifische Darstellungs-Stylesheet einbinden */
-		@import url(./appearance.css);
-		@import url(./images.css);
+		@import url("../../../main.css");
+		@import url("./appearance.css");
+		@import url("./images.css");
 
