success message color added for theme: blue, classic, darkGreen, darkGrey, highContrast

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_classic/styles/appearance.css
@@ -636,6 +636,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 /*STATUS OR SUCCESS MESSAGE*/
+.messageSuccess {
+    color: #66852C;
+}
+
 .messageStatus {
     color: #66852C;
 }
