--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_blue/styles/appearance.css
@@ -648,6 +648,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 /*STATUS OR SUCCESS MESSAGE*/
+.messageSuccess {
+    color: #56871B;
+}
+
 .messageStatus {
     color: #56871B;
 }
