--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/themes/skin_highContrast/styles/appearance.css
@@ -635,6 +635,10 @@ a:disabled, a.disabled, input:disabled, input.disabled, button:disabled, button.
 }
 
 /*STATUS OR SUCCESS MESSAGE*/
+.messageSuccess {
+    color: #548E00;
+}
+
 .messageStatus {
     color: #548E00;
 }
