--- a/pubman/pubman_presentation/src/main/webapp/editItem/LegalCaseGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LegalCaseGroup.jspf
@@ -87,9 +87,9 @@
 	</h:panelGroup>	
 	
 
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.legal_case_label}" converter="GenreLabelConverter"/></a>	
+		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.legal_case_label}" converter="GenreLabelConverter"/></a>
+	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} " /></a>
 </h:panelGroup>		
 			
 		
