--- a/pubman/pubman_presentation/src/main/webapp/viewItem/EventGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/EventGroup.jspf
@@ -93,7 +93,7 @@
 			</span>
 		</h:panelGroup>
 
-		<a id="lnkHideGroupEvent" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderEvent}" /></a>	
+		<a id="lnkHideGroupEvent" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</h:panelGroup>
-	<a id="lnkShowGroupEvent" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderEvent}" /></a>
+	<a id="lnkShowGroupEvent" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 </h:panelGroup>
