--- a/pubman/pubman_presentation/src/main/webapp/viewItem/SystemDetailGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/SystemDetailGroup.jspf
@@ -79,8 +79,8 @@
 			</span>
 		</h:panelGroup>
 
-		<a id="lnkHideGroupSystemDetails" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderSystemDetails}" /></a>	
+		<a id="lnkHideGroupSystemDetails" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</h:panelGroup>
-	<a id="lnkShowGroupSystemDetails" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderSystemDetails}" /></a>
+	<a id="lnkShowGroupSystemDetails" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 
 </h:panelGroup>
