--- a/pubman/pubman_presentation/src/main/webapp/editItem/BasicGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/BasicGroup.jspf
@@ -122,7 +122,7 @@
 			</h:panelGroup>
 		</tr:iterator>
 	
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}  #{lbl.EditItem_lblBasic}" /></a>	
+		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}    #{lbl.EditItem_lblBasic}" /></a>
+	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 </h:panelGroup>
