--- a/pubman/pubman_presentation/src/main/webapp/editItem/ContentGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/ContentGroup.jspf
@@ -97,7 +97,7 @@
 			</h:panelGroup>
 		</tr:iterator>
 
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.content_label}" converter="GenreLabelConverter"/></a>	
+		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.content_label}" converter="GenreLabelConverter"/></a>
+	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 </h:panelGroup>
