--- a/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/PersOrgGroup.jspf
@@ -210,11 +210,9 @@
 		</span>
 		<a class="free_area0 collapse"> <h:outputText
 			value="#{lbl.ViewItemFull_lblHideGroup}" /> 
-			<h:outputText value="#{genre.creator_person_organization_label}"
-			converter="GenreLabelConverter" /> </a>
+			</a>
 	</h:panelGroup>
 	<a class="free_area0 expand" > <h:outputText
-		value="#{lbl.ViewItemFull_lblShowGroup}" /> <h:outputText value="#{genre.creator_person_organization_label}"
-		converter="GenreLabelConverter" /> </a>
+		value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 		</div>
 </h:panelGroup>
