--- a/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/header/ui/SearchMenu.jspf
@@ -40,9 +40,9 @@
 			<h:outputLabel for="quickSearchCheckBox" value="#{lbl.search_lblIncludeFiles}"/>
 		</h:panelGroup>
 	</span>
-	<h:commandButton id="btnQuickSearchStart" styleClass="xSmall_txtBtn activeButton quickSearchBtn" title="#{tip.adv_search_btStart}" action="#{Search.startSearch}" value="#{lbl.quick_search_btnStart}"/>
+	<h:commandButton id="btnQuickSearchStart" styleClass="small_txtBtn activeButton quickSearchBtn" title="#{tip.adv_search_btStart}" action="#{Search.startSearch}" value="#{lbl.quick_search_btnStart}"/>
 	
-	<h:commandLink id="lnkAdvancedSearch" styleClass="medium_area0_p3 advancedSearchMenu" title="#{tip.search_advanced}" immediate="true" rendered="#{!AdvancedSearch.disableAdvancedSearch}" action="#{AdvancedSearch.showSearchPage}">
+	<h:commandLink id="lnkAdvancedSearch" styleClass="small_area0_p3 advancedSearchMenu" title="#{tip.search_advanced}" immediate="true" rendered="#{!AdvancedSearch.disableAdvancedSearch}" action="#{AdvancedSearch.showSearchPage}">
 		<h:outputText value="#{lbl.search_lblAdvancedSearch}"/>
 	</h:commandLink>
 
