--- a/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/FilesGroup.jspf
@@ -13,7 +13,7 @@
             and limitations under the License.
 
             When distributing Covered Code, include this CDDL HEADER in each
-            file and include the License file at license/ESCIDOC.LICENSE.
+            file and include the License file at license/ESCIDOC.LICENSE.f
             If applicable, add the following below this CDDL HEADER, with the
             fields enclosed by brackets "[]" replaced with your own identifying
             information: Portions Copyright [yyyy] [name of copyright owner]
