--- a/pubman/pubman_presentation/src/main/webapp/viewItem/LegalCaseGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/LegalCaseGroup.jspf
@@ -61,7 +61,7 @@
 
 
 
-		<a id="lnkHideGroupEvent" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderLegalCase}" /></a>	
+		<a id="lnkHideGroupEvent" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 	</h:panelGroup>
-	<a id="lnkShowGroupEvent" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderLegalCase}" /></a>
+	<a id="lnkShowGroupEvent" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 </h:panelGroup>
