--- a/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/viewItem/SourceGroup.jspf
@@ -36,7 +36,7 @@
 			<h:outputText value="#{lbl.ViewItemFull_lblSubHeaderSource}" />
 		</h3>
 		<span class="seperator"></span>
-	<a id="lnkShowGroupSources" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderSource}" /></a>
+	<a id="lnkShowGroupSources" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 </h:panelGroup>
 
 
@@ -206,9 +206,9 @@
 				</span>
 			</h:panelGroup>
 	
-			<a id="lnkHideGroupSource" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} #{lbl.ViewItemFull_lblSubHeaderSource} #{ViewItemFull.sourceIterator.rowIndex +1}" /></a>	
+			<a id="lnkHideGroupSource" class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup}" /></a>	
 		</h:panelGroup>
-		<a id="lnkShowGroupSource" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}  #{lbl.ViewItemFull_lblSubHeaderSource} #{ViewItemFull.sourceIterator.rowIndex +1}" /></a>
+		<a id="lnkShowGroupSource" class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup}" /></a>
 	
 	</h:panelGroup>
 
