--- a/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/home/StartPageLoggedOut.jspf
@@ -78,12 +78,14 @@
 <!-- HOMEPAGE GERMAN VERSION -->
 <h:panelGroup rendered="#{PubManSessionBean.locale =='de'}">
 	<h2>
-	PubMan <h:outputText value="#{ApplicationBean.shortVersion}"/> - eine eSciDoc Lösung für Publikationsdaten-Management 
+	PubMan <h:outputText value="#{ApplicationBean.shortVersion}"/> - Eine eSciDoc Anwendung für Publikationsdaten 
 	</h2>
-	<p>	Machen Sie Ihre Publikationen und Supplementary Material verfügbar für Kollegen!<br/>
-		Stellen Sie Ihre Ergebnisse in einem persönlichen "Researcher Portfolio" zusammen!<br/>
-		Nutzen Sie den MPG Service für nachhaltige Datensicherung! <br/>
+	<p>
+	Pubman bietet Ihnen die Möglichkeit Ihre Publikationen und ergänzendes Material dauerhaft zu veröffentlichen.
 	</p>
+	<p>
+	Ihre gesammelten Veröffentlichungen können Sie in einem "Reseacher Portfolio" präsentieren.
+	</p>	
 	<a href="http://colab.mpdl.mpg.de/mediawiki/Portal:PubMan" target="_blank">Lesen Sie mehr </a>
 	<h:outputText value="|"/>
     <a href="http://colab.mpdl.mpg.de/mediawiki/PubMan_Support" target="_blank"><h:outputText value="#{lbl.Home_Link_Support }"/></a>
@@ -106,13 +108,26 @@
 	<h2>
 	PubMan Schnittstellen
 	</h2>
-		<ul>
-			<li>Search&Export Service (Unterst&uuml;tzt Datenanfragen zur Integration in externe Systeme). <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST Schnittstelle</a>; <a href="/pubman/faces/../../search/SearchAndExport_rest_sample.jsp" target="_blank">Beispiel</a>.</li>
-			<li>Data Acquisition Service mit einer <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI Schnittstelle</a> (Datenimport aus externen Systemen wie arXiv)</li>
-			<li><a href="/validation/" target="_blank">Validation Service</a>:Validierung von XML Daten</li>
-			<li><a href="/cone/" target="_blank">Control of Named Entities Service (CoNE)</a>: Anfragen von kontrollierten Vokabularien wie Journal Namen oder Personen</li>
-			<li>Eine <a href="/sword-app" target="_blank">SWORD Schnittstelle</a> f&uuml;r automatisierte Deposits.</li>
-		</ul>
+	<span>		
+	<h4>Suche und Export</h4>
+	Wollen Sie eine neue Publikation ertellen? Folgende Möglickeiten können Sie nutzen:
+	<ul style="list-style-position: outside">
+		<li>Der <a href="/pubman/faces/../../search/SearchAndExport_info.jsp" target="_blank">REST</a> Service unterstützt Datenanfragen zur Integration in externe Systeme.</li>
+	</ul>
+
+	<h4>Service zur Datenerfassung</h4>
+	Mit einer <a href="/pubman/faces/../../dataacquisition" target="_blank">unAPI Schnittstelle</a> für den Datenimport aus externen Systemen wie arXiv wartet dieser Service auf.
+	
+	<h4>Service zur Validierung</h4>
+	Der Service zur <a href="/validation/" target="_blank">Validierung</a> bietet Ihnen die Möglichkeit XML Daten zu überprüfen.
+			
+	<h4>Unterstützung von ”Kontrolliertem Vokabular” (CoNE)</h4>
+	Zur eindeutigen Identifiezierung kann auf <a href="/cone/" target="_blank">Kontrolliertes Vokabular</a>zurückgegriffen werden.
+
+	<h4>SWORD Schnittstelle</h4>
+	Außerdem bietet PubMan eine <a href="/sword-app" target="_blank">SWORD Schnittstelle</a> für den  automatisierten Import.
+</span></br></br>
+
 	<span>Weitere Informationen finden Sie unter:</span>
 	<a href="http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces" target="_blank">http://colab.mpdl.mpg.de/mediawiki/ESciDoc_Interfaces</a>
 </h:panelGroup>
