--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -93,19 +93,17 @@
  		<h:outputLabel id="lblPaginatorPageSize" styleClass="free_label" value="#{PubItemListSessionBean.paginatorPageSize}" />
  		<h:commandButton id="btList_btGo" styleClass="xTiny_txtBtn paginatorFallbackGoBtn" value="#{lbl.list_btGo}" title="#{tip.List_btGo}" action="#{PubItemListSessionBean.goToPageTop}"/>
  	</div>
-
  </div>
-
 
  <div class="full_area0 itemList <h:outputText value='loggedIn' rendered='#{LoginHelper.loggedIn}' />">
  	<div class="full_area0 listHeader">
- 		<span class="free_area0_p8 endline itemSelectArea" style="padding-top: 0px;">
- 			<input type="button" id="btcheckBoxSelectButton" class="min_imgBtn checkBoxSelectButton"/>
+ 		<span class="free_area0_p8 endline itemSelectArea">
+ 			<input type="checkbox" class="allCheckBox"/>
+ 			<input type="button" id="btcheckBoxSelectButton" class="min_imgBtn checkboxSelectButton"/>
  			<div class="large_area1 xTiny_marginLIncl selectMenu" style="display: none;">
- 				<input type="button" id="btCheckBoxCloseSelectButton" class="min_imgBtn checkBoxCloseSelectButton"></input>
  				<span class="medium_area0_p8"><h:outputText value="#{lbl.List_SelectItem}"/></span>
  				<h:commandLink id="lnkList_lkAll" title="#{tip.List_lkAll}" disabled="true" styleClass="large_area0 selectAll"><span class="medium_area0_p8 tiny_marginLIncl"><h:outputText value="#{lbl.List_lkAllOnPage}"/></span></h:commandLink>
- 				<%-- <a class="large_area0 selectTotal"><span class="medium_area0_p8 tiny_marginLIncl">All</span></a>--%>
+ 				<h:commandLink id="lnkList_lkToggle" title="#{tip.List_lkToggle}" disabled="true" styleClass="large_area0 toggleAll"><span class="medium_area0_p8 tiny_marginLIncl"><h:outputText value="#{lbl.List_lkToggleAll}"/></span></h:commandLink>
  				<h:commandLink id="lnkList_lkNone" title="#{tip.List_lkNone}" disabled="true" styleClass="large_area0 selectNone"><span class="medium_area0_p8 tiny_marginLIncl"><h:outputText value="#{lbl.List_lkNone}"/></span></h:commandLink>
  			</div>
  			&nbsp;
@@ -124,8 +122,8 @@
  		</span>
  		<span class="seperator status"></span>
  		<span class="half_area0_p6 headerSwitchView">
- 			<a class="expand"><span class="noDisplay"><h:outputText title="#{tip.List_Show}" value="#{lbl.List_Show}"/> </span><h:outputText title="#{tip.List_MedView}" value="#{lbl.List_MedView}"/></a>
- 			<a class="collapse"><span class="noDisplay"><h:outputText title="#{tip.List_SelectItem}" value="#{lbl.List_SelectItem}"/> </span><h:outputText title="#{tip.List_ShortView}" value="#{lbl.List_ShortView}"/></a>
+ 			<a class="expandTriangle"><span class="noDisplay"><h:outputText title="#{tip.List_Show}" value="#{lbl.List_Show}"/> </span><h:outputText title="#{tip.List_MedView}" value="#{lbl.List_MedView}"/></a>
+ 			<a class="collapseTriangle"><span class="noDisplay"><h:outputText title="#{tip.List_SelectItem}" value="#{lbl.List_SelectItem}"/> </span><h:outputText title="#{tip.List_ShortView}" value="#{lbl.List_ShortView}"/></a>
  		</span>
  	</div>
  	<ol>
@@ -134,10 +132,10 @@
  	<h:panelGroup>
  		<li class="full_area0 listItem">
  			<h:panelGroup layout="block" styleClass="free_area0 itemHeader">
- 				<span class="free_area0_p8 endline itemSelectArea">
+ 				<label class="free_area0_p8 endline itemSelectArea">
  					<h:selectBooleanCheckbox id="selItemSelect" styleClass="itemCheckBox" value="#{item.selected}" immediate="true" valueChangeListener="#{item.select}" rendered="#{item.showCheckbox}"/>
 					&#160;
- 				</span>
+ 				</label>
  				<span class="seperator"></span>
  				<span class="free_area0_p8 status statusArea">
  					<h:panelGroup styleClass="big_imgArea statusIcon withdrawnItem tiny_marginLExcl" rendered="#{item.isStateWithdrawn}" />
@@ -162,7 +160,6 @@
  					<h:outputLink id="lnkList_shortTitle" title="#{item.fullTitle}" value="#{item.link}">
  						<b><h:outputText value="#{item.shortTitle}" converter="HTMLSubSupConverter" escape="false"/></b>
  					</h:outputLink>
-					
  				</span>
  			</h:panelGroup>
  			
@@ -198,11 +195,7 @@
  	</ol>
  </div>
 
-
-
-
  <div class="full_area0 paginator">
-
  
  	<div class="large_area0 small_marginLIncl rangeSelector">
 		<h:selectOneMenu id="extSelectBottom" styleClass="free_select" value="#{PubItemListSessionBean.elementsPerPageBottom}" onchange="$(this).parents('div').find('.hiddenElementsNumberChangedButton').click();">
