CSS3 enhancement for textarea resize only vertical resize allowed

--- a/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
+++ b/common_services/common_presentation/src/main/webapp/resources/cssFramework/globalCSS/eSciDoc_core_em.css
@@ -76,6 +76,10 @@ body .wrapper {
     margin-bottom: -2.00em;
 }
 
+textarea {
+	resize:vertical;
+}
+
 .noDisplay {
     display: none !important;
 }
